@@ -4,11 +4,10 @@ import greencity.constant.AppConstant;
 import greencity.dto.PageableAdvancedDto;
 import greencity.dto.econews.*;
 import greencity.dto.econewscomment.*;
+import greencity.dto.event.*;
 import greencity.dto.eventcomments.AddEventCommentDtoRequest;
 import greencity.dto.eventcomments.EventCommentAuthorDto;
 import greencity.dto.eventcomments.EventCommentDto;
-import greencity.dto.tag.TagUaEnDto;
-import greencity.dto.event.*;
 import greencity.dto.habit.HabitAssignPropertiesDto;
 import greencity.dto.habit.HabitAssignVO;
 import greencity.dto.habitfact.HabitFactTranslationVO;
@@ -39,7 +38,6 @@ import java.nio.file.Paths;
 import java.security.Principal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.util.*;
 
@@ -58,42 +56,42 @@ public class ModelUtils {
 
     public static Tag getTag() {
         return new Tag(1L, TagType.ECO_NEWS, getTagTranslations(), Collections.emptyList(),
-            Collections.emptySet(), Collections.emptySet());
+                Collections.emptySet(), Collections.emptySet());
     }
 
     public static Tag getEventTag() {
         return new Tag(1L, TagType.EVENT, getEventTagTranslations(), Collections.emptyList(),
-            Collections.emptySet(), Collections.emptySet());
+                Collections.emptySet(), Collections.emptySet());
     }
 
     public static Tag getHabitTag() {
         return new Tag(1L, TagType.HABIT, getHabitTagTranslations(), Collections.emptyList(),
-            Collections.emptySet(), Collections.emptySet());
+                Collections.emptySet(), Collections.emptySet());
     }
 
     public static List<TagTranslation> getTagTranslations() {
         return Arrays.asList(
-            TagTranslation.builder().id(1L).name("Новини").language(Language.builder().id(2L).code("ua").build())
-                .build(),
-            TagTranslation.builder().id(2L).name("News").language(Language.builder().id(1L).code("en").build())
-                .build());
+                TagTranslation.builder().id(1L).name("Новини").language(Language.builder().id(2L).code("ua").build())
+                        .build(),
+                TagTranslation.builder().id(2L).name("News").language(Language.builder().id(1L).code("en").build())
+                        .build());
     }
 
     public static List<TagTranslation> getHabitTagTranslations() {
         return Arrays.asList(
-            TagTranslation.builder().id(1L).name("Багаторазове використання")
-                .language(Language.builder().id(2L).code("ua").build())
-                .build(),
-            TagTranslation.builder().id(2L).name("Reusable").language(Language.builder().id(1L).code("en").build())
-                .build());
+                TagTranslation.builder().id(1L).name("Багаторазове використання")
+                        .language(Language.builder().id(2L).code("ua").build())
+                        .build(),
+                TagTranslation.builder().id(2L).name("Reusable").language(Language.builder().id(1L).code("en").build())
+                        .build());
     }
 
     public static List<TagTranslation> getEventTagTranslations() {
         Language language = getLanguage();
         return Arrays.asList(
-            TagTranslation.builder().id(1L).name("Соціальний").language(getLanguageUa()).build(),
-            TagTranslation.builder().id(2L).name("Social").language(language).build(),
-            TagTranslation.builder().id(3L).name("Соціальний").language(language).build());
+                TagTranslation.builder().id(1L).name("Соціальний").language(getLanguageUa()).build(),
+                TagTranslation.builder().id(2L).name("Social").language(language).build(),
+                TagTranslation.builder().id(3L).name("Соціальний").language(language).build());
     }
 
     public static TagDto getTagDto() {
@@ -110,78 +108,78 @@ public class ModelUtils {
 
     public static User getUser() {
         return User.builder()
-            .id(1L)
-            .email(TestConst.EMAIL)
-            .name(TestConst.NAME)
-            .role(Role.ROLE_USER)
-            .userStatus(UserStatus.ACTIVATED)
-            .lastActivityTime(localDateTime)
-            .verifyEmail(new VerifyEmail())
-            .dateOfRegistration(localDateTime)
-            .build();
+                .id(1L)
+                .email(TestConst.EMAIL)
+                .name(TestConst.NAME)
+                .role(Role.ROLE_USER)
+                .userStatus(UserStatus.ACTIVATED)
+                .lastActivityTime(localDateTime)
+                .verifyEmail(new VerifyEmail())
+                .dateOfRegistration(localDateTime)
+                .build();
     }
 
     public static UserVO getUserVO() {
         return UserVO.builder()
-            .id(1L)
-            .email(TestConst.EMAIL)
-            .name(TestConst.NAME)
-            .role(Role.ROLE_USER)
-            .lastActivityTime(localDateTime)
-            .verifyEmail(new VerifyEmailVO())
-            .dateOfRegistration(localDateTime)
-            .build();
+                .id(1L)
+                .email(TestConst.EMAIL)
+                .name(TestConst.NAME)
+                .role(Role.ROLE_USER)
+                .lastActivityTime(localDateTime)
+                .verifyEmail(new VerifyEmailVO())
+                .dateOfRegistration(localDateTime)
+                .build();
     }
 
     public static UserManagementVO getUserManagementVO() {
         return UserManagementVO.builder()
-            .id(1L)
-            .userStatus(ACTIVATED)
-            .email("Test@gmail.com")
-            .role(Role.ROLE_ADMIN).build();
+                .id(1L)
+                .userStatus(ACTIVATED)
+                .email("Test@gmail.com")
+                .role(Role.ROLE_ADMIN).build();
     }
 
     public static UserVO getUserVOWithData() {
         return UserVO.builder()
-            .id(13L)
-            .name("user")
-            .email("namesurname1995@gmail.com")
-            .role(Role.ROLE_USER)
-            .userCredo("save the world")
-            .firstName("name")
-            .emailNotification(EmailNotification.MONTHLY)
-            .userStatus(UserStatus.ACTIVATED)
-            .rating(13.4)
-            .verifyEmail(VerifyEmailVO.builder()
-                .id(32L)
-                .user(UserVO.builder()
-                    .id(13L)
-                    .name("user")
-                    .build())
-                .expiryDate(LocalDateTime.of(2021, 7, 7, 7, 7))
-                .token("toooookkkeeeeen42324532542")
-                .build())
-            .userFriends(Collections.singletonList(
-                UserVO.builder()
-                    .id(75L)
-                    .name("Andrew")
-                    .build()))
-            .refreshTokenKey("refreshtoooookkkeeeeen42324532542")
-            .ownSecurity(null)
-            .dateOfRegistration(LocalDateTime.of(2020, 6, 6, 13, 47))
-            .city("Lviv")
-            .showShoppingList(true)
-            .showEcoPlace(true)
-            .showLocation(true)
-            .ownSecurity(OwnSecurityVO.builder()
-                .id(1L)
-                .password("password")
-                .user(UserVO.builder()
-                    .id(13L)
-                    .build())
-                .build())
-            .lastActivityTime(LocalDateTime.of(2020, 12, 11, 13, 30))
-            .build();
+                .id(13L)
+                .name("user")
+                .email("namesurname1995@gmail.com")
+                .role(Role.ROLE_USER)
+                .userCredo("save the world")
+                .firstName("name")
+                .emailNotification(EmailNotification.MONTHLY)
+                .userStatus(UserStatus.ACTIVATED)
+                .rating(13.4)
+                .verifyEmail(VerifyEmailVO.builder()
+                        .id(32L)
+                        .user(UserVO.builder()
+                                .id(13L)
+                                .name("user")
+                                .build())
+                        .expiryDate(LocalDateTime.of(2021, 7, 7, 7, 7))
+                        .token("toooookkkeeeeen42324532542")
+                        .build())
+                .userFriends(Collections.singletonList(
+                        UserVO.builder()
+                                .id(75L)
+                                .name("Andrew")
+                                .build()))
+                .refreshTokenKey("refreshtoooookkkeeeeen42324532542")
+                .ownSecurity(null)
+                .dateOfRegistration(LocalDateTime.of(2020, 6, 6, 13, 47))
+                .city("Lviv")
+                .showShoppingList(true)
+                .showEcoPlace(true)
+                .showLocation(true)
+                .ownSecurity(OwnSecurityVO.builder()
+                        .id(1L)
+                        .password("password")
+                        .user(UserVO.builder()
+                                .id(13L)
+                                .build())
+                        .build())
+                .lastActivityTime(LocalDateTime.of(2020, 12, 11, 13, 30))
+                .build();
     }
 
     public static Language getLanguage() {
@@ -196,8 +194,8 @@ public class ModelUtils {
         Tag tag = new Tag();
         tag.setTagTranslations(getTagTranslations());
         return new EcoNews(1L, zonedDateTime, TestConst.SITE, "source", "shortInfo", getUser(),
-            "title", "text", List.of(EcoNewsComment.builder().id(1L).text("test").build()),
-            Collections.singletonList(tag), Collections.emptySet(), Collections.emptySet());
+                "title", "text", List.of(EcoNewsComment.builder().id(1L).text("test").build()),
+                Collections.singletonList(tag), Collections.emptySet(), Collections.emptySet());
     }
 
     public static Event getEvent() {
@@ -207,8 +205,8 @@ public class ModelUtils {
         tag.setTagTranslations(getEventTagTranslations());
         return new Event(1L, "event title", "event description event description", zonedDateTime,
                 List.of(getDateLocation()),
-                getUser(), "https://google.com/", false, false, false, null,
-                null, List.of(tag), null);
+                getUser(), "https://google.com/", false, false, new ArrayList<>(), false,
+                null, List.of(tag), null, new ArrayList<>());
     }
 
     public static Event getNotValidEvent() {
@@ -218,189 +216,189 @@ public class ModelUtils {
         tag.setTagTranslations(getEventTagTranslations());
         return new Event(1L, "event title", "event description event description", zonedDateTime,
                 List.of(getDateLocation()),
-                getUser(), "https://google.com/", false, false, false,null,
-                null, List.of(tag), null);
+                getUser(), "https://google.com/", false, false, new ArrayList<>(), false,
+                null, List.of(tag), null, new ArrayList<>());
     }
 
     public static DateLocation getDateLocation() {
         return DateLocation.builder()
-            .id(1L)
-            .onlineLink("https://google.com/")
-            .startDate(zonedDateTime.plusHours(3))
-            .finishDate(zonedDateTime.plusHours(7))
-            .address(Address.builder()
-                .latitude(1.0)
-                .longitude(1.0)
-                .build())
-            .build();
+                .id(1L)
+                .onlineLink("https://google.com/")
+                .startDate(zonedDateTime.plusHours(3))
+                .finishDate(zonedDateTime.plusHours(7))
+                .address(Address.builder()
+                        .latitude(1.0)
+                        .longitude(1.0)
+                        .build())
+                .build();
     }
 
     public static DateLocation getInvalidDateLocation() {
         return DateLocation.builder()
-            .id(1L)
-            .onlineLink("https://google.com/")
-            .startDate(zonedDateTime.minusHours(3))
-            .finishDate(zonedDateTime.minusHours(7))
-            .address(Address.builder()
-                .latitude(1.0)
-                .longitude(1.0)
-                .build())
-            .build();
+                .id(1L)
+                .onlineLink("https://google.com/")
+                .startDate(zonedDateTime.minusHours(3))
+                .finishDate(zonedDateTime.minusHours(7))
+                .address(Address.builder()
+                        .latitude(1.0)
+                        .longitude(1.0)
+                        .build())
+                .build();
     }
 
     public static EcoNews getEcoNewsForFindDtoByIdAndLanguage() {
         return new EcoNews(1L, null, TestConst.SITE, null, "shortInfo", getUser(),
-            "title", "text", null, Collections.singletonList(getTag()), Collections.emptySet(), Collections.emptySet());
+                "title", "text", null, Collections.singletonList(getTag()), Collections.emptySet(), Collections.emptySet());
     }
 
     public static EcoNewsVO getEcoNewsVO() {
         return new EcoNewsVO(1L, zonedDateTime, TestConst.SITE, null, getUserVO(),
-            "title", "text", null, Collections.emptySet(), Collections.singletonList(getTagVO()),
-            Collections.emptySet());
+                "title", "text", null, Collections.emptySet(), Collections.singletonList(getTagVO()),
+                Collections.emptySet());
     }
 
     public static HabitStatusCalendar getHabitStatusCalendar() {
         return HabitStatusCalendar.builder()
-            .enrollDate(LocalDate.now()).id(1L).build();
+                .enrollDate(LocalDate.now()).id(1L).build();
     }
 
     public static HabitAssign getHabitAssign() {
         return HabitAssign.builder()
-            .id(1L)
-            .status(HabitAssignStatus.ACQUIRED)
-            .createDate(ZonedDateTime.now())
-            .habit(Habit.builder()
                 .id(1L)
-                .image("")
-                .habitTranslations(Collections.singletonList(HabitTranslation.builder()
-                    .id(1L)
-                    .name("")
-                    .description("")
-                    .habitItem("")
-                    .language(getLanguage())
-                    .build()))
-                .build())
-            .user(getUser())
-            .userShoppingListItems(new ArrayList<>())
-            .workingDays(0)
-            .duration(0)
-            .habitStreak(0)
-            .habitStatistic(Collections.singletonList(getHabitStatistic()))
-            .habitStatusCalendars(Collections.singletonList(getHabitStatusCalendar()))
-            .lastEnrollmentDate(ZonedDateTime.now())
-            .build();
+                .status(HabitAssignStatus.ACQUIRED)
+                .createDate(ZonedDateTime.now())
+                .habit(Habit.builder()
+                        .id(1L)
+                        .image("")
+                        .habitTranslations(Collections.singletonList(HabitTranslation.builder()
+                                .id(1L)
+                                .name("")
+                                .description("")
+                                .habitItem("")
+                                .language(getLanguage())
+                                .build()))
+                        .build())
+                .user(getUser())
+                .userShoppingListItems(new ArrayList<>())
+                .workingDays(0)
+                .duration(0)
+                .habitStreak(0)
+                .habitStatistic(Collections.singletonList(getHabitStatistic()))
+                .habitStatusCalendars(Collections.singletonList(getHabitStatusCalendar()))
+                .lastEnrollmentDate(ZonedDateTime.now())
+                .build();
     }
 
     public static HabitStatistic getHabitStatistic() {
         return HabitStatistic.builder()
-            .id(1L).habitRate(HabitRate.GOOD).createDate(ZonedDateTime.now())
-            .amountOfItems(10).build();
+                .id(1L).habitRate(HabitRate.GOOD).createDate(ZonedDateTime.now())
+                .amountOfItems(10).build();
     }
 
     public static UserShoppingListItem getCustomUserShoppingListItem() {
         return UserShoppingListItem.builder()
-            .id(1L)
-            .habitAssign(HabitAssign.builder().id(1L).build())
-            .status(ShoppingListItemStatus.DONE)
-            .build();
+                .id(1L)
+                .habitAssign(HabitAssign.builder().id(1L).build())
+                .status(ShoppingListItemStatus.DONE)
+                .build();
     }
 
     public static UserShoppingListItem getFullUserShoppingListItem() {
         return UserShoppingListItem.builder()
-            .id(1L)
-            .shoppingListItem(getShoppingListItem())
-            .habitAssign(HabitAssign.builder().id(1L).build())
-            .status(ShoppingListItemStatus.DONE)
-            .build();
+                .id(1L)
+                .shoppingListItem(getShoppingListItem())
+                .habitAssign(HabitAssign.builder().id(1L).build())
+                .status(ShoppingListItemStatus.DONE)
+                .build();
     }
 
     public static UserShoppingListItemResponseDto getUserShoppingListItemResponseDto() {
         return UserShoppingListItemResponseDto.builder()
-            .id(1L)
-            .text("Buy electric car")
-            .status(ShoppingListItemStatus.ACTIVE)
-            .build();
+                .id(1L)
+                .text("Buy electric car")
+                .status(ShoppingListItemStatus.ACTIVE)
+                .build();
     }
 
     public static UserShoppingListItem getPredefinedUserShoppingListItem() {
         return UserShoppingListItem.builder()
-            .id(2L)
-            .habitAssign(HabitAssign.builder().id(1L).build())
-            .status(ShoppingListItemStatus.ACTIVE)
-            .shoppingListItem(ShoppingListItem.builder().id(1L).userShoppingListItems(Collections.emptyList())
-                .translations(
-                    getShoppingListItemTranslations())
-                .build())
-            .build();
+                .id(2L)
+                .habitAssign(HabitAssign.builder().id(1L).build())
+                .status(ShoppingListItemStatus.ACTIVE)
+                .shoppingListItem(ShoppingListItem.builder().id(1L).userShoppingListItems(Collections.emptyList())
+                        .translations(
+                                getShoppingListItemTranslations())
+                        .build())
+                .build();
     }
 
     public static UserShoppingListItemVO getUserShoppingListItemVO() {
         return UserShoppingListItemVO.builder()
-            .id(1L)
-            .habitAssign(HabitAssignVO.builder()
                 .id(1L)
-                .build())
-            .status(ShoppingListItemStatus.DONE)
-            .build();
+                .habitAssign(HabitAssignVO.builder()
+                        .id(1L)
+                        .build())
+                .status(ShoppingListItemStatus.DONE)
+                .build();
     }
 
     public static UserShoppingListItem getUserShoppingListItem() {
         return UserShoppingListItem.builder()
-            .id(1L)
-            .status(ShoppingListItemStatus.DONE)
-            .habitAssign(HabitAssign.builder()
                 .id(1L)
-                .status(HabitAssignStatus.ACQUIRED)
-                .habitStreak(10)
-                .duration(300)
-                .lastEnrollmentDate(ZonedDateTime.now())
-                .workingDays(5)
-                .build())
-            .shoppingListItem(ShoppingListItem.builder()
-                .id(1L)
-                .build())
-            .dateCompleted(LocalDateTime.of(2021, 2, 2, 14, 2))
-            .build();
+                .status(ShoppingListItemStatus.DONE)
+                .habitAssign(HabitAssign.builder()
+                        .id(1L)
+                        .status(HabitAssignStatus.ACQUIRED)
+                        .habitStreak(10)
+                        .duration(300)
+                        .lastEnrollmentDate(ZonedDateTime.now())
+                        .workingDays(5)
+                        .build())
+                .shoppingListItem(ShoppingListItem.builder()
+                        .id(1L)
+                        .build())
+                .dateCompleted(LocalDateTime.of(2021, 2, 2, 14, 2))
+                .build();
     }
 
     public static List<ShoppingListItemTranslation> getShoppingListItemTranslations() {
         return Arrays.asList(
-            ShoppingListItemTranslation.builder()
-                .id(2L)
-                .language(new Language(1L, AppConstant.DEFAULT_LANGUAGE_CODE, Collections.emptyList(),
-                    Collections.emptyList()))
-                .content("Buy a bamboo toothbrush")
-                .shoppingListItem(
-                    new ShoppingListItem(1L, Collections.emptyList(), Collections.emptySet(), Collections.emptyList()))
-                .build(),
-            ShoppingListItemTranslation.builder()
-                .id(11L)
-                .language(new Language(1L, AppConstant.DEFAULT_LANGUAGE_CODE, Collections.emptyList(),
-                    Collections.emptyList()))
-                .content("Start recycling batteries")
-                .shoppingListItem(
-                    new ShoppingListItem(4L, Collections.emptyList(), Collections.emptySet(), Collections.emptyList()))
-                .build());
+                ShoppingListItemTranslation.builder()
+                        .id(2L)
+                        .language(new Language(1L, AppConstant.DEFAULT_LANGUAGE_CODE, Collections.emptyList(),
+                                Collections.emptyList()))
+                        .content("Buy a bamboo toothbrush")
+                        .shoppingListItem(
+                                new ShoppingListItem(1L, Collections.emptyList(), Collections.emptySet(), Collections.emptyList()))
+                        .build(),
+                ShoppingListItemTranslation.builder()
+                        .id(11L)
+                        .language(new Language(1L, AppConstant.DEFAULT_LANGUAGE_CODE, Collections.emptyList(),
+                                Collections.emptyList()))
+                        .content("Start recycling batteries")
+                        .shoppingListItem(
+                                new ShoppingListItem(4L, Collections.emptyList(), Collections.emptySet(), Collections.emptyList()))
+                        .build());
     }
 
     public static HabitFactTranslation getFactTranslation() {
         return HabitFactTranslation.builder()
-            .id(1L)
-            .factOfDayStatus(FactOfDayStatus.CURRENT)
-            .habitFact(null)
-            .content("Content")
-            .language(getLanguage())
-            .build();
+                .id(1L)
+                .factOfDayStatus(FactOfDayStatus.CURRENT)
+                .habitFact(null)
+                .content("Content")
+                .language(getLanguage())
+                .build();
     }
 
     public static HabitFactTranslationVO getFactTranslationVO() {
         return HabitFactTranslationVO.builder()
-            .id(1L)
-            .factOfDayStatus(FactOfDayStatus.CURRENT)
-            .habitFact(null)
-            .language(getLanguageVO())
-            .content("Content")
-            .build();
+                .id(1L)
+                .factOfDayStatus(FactOfDayStatus.CURRENT)
+                .habitFact(null)
+                .language(getLanguageVO())
+                .content("Content")
+                .build();
     }
 
     public static LanguageTranslationDTO getLanguageTranslationDTO() {
@@ -413,14 +411,14 @@ public class ModelUtils {
 
     public static AddEcoNewsDtoRequest getAddEcoNewsDtoRequest() {
         return new AddEcoNewsDtoRequest("title", "text",
-            Collections.singletonList("News"), "source", null, "shortInfo");
+                Collections.singletonList("News"), "source", null, "shortInfo");
     }
 
     public static AddEcoNewsDtoResponse getAddEcoNewsDtoResponse() {
         return new AddEcoNewsDtoResponse(1L, "title",
-            "text", "shortInfo", EcoNewsAuthorDto.builder().id(1L).name(TestConst.NAME).build(),
-            ZonedDateTime.now(), TestConst.SITE, "source",
-            Arrays.asList("Новини", "News"));
+                "text", "shortInfo", EcoNewsAuthorDto.builder().id(1L).name(TestConst.NAME).build(),
+                ZonedDateTime.now(), TestConst.SITE, "source",
+                Arrays.asList("Новини", "News"));
     }
 
     public static MultipartFile getFile() {
@@ -434,7 +432,7 @@ public class ModelUtils {
             e.printStackTrace();
         }
         return new MockMultipartFile(name,
-            name, contentType, content);
+                name, contentType, content);
     }
 
     public static MultipartFile getImage() {
@@ -448,7 +446,7 @@ public class ModelUtils {
             e.printStackTrace();
         }
         return new MockMultipartFile(name,
-            name, contentType, content);
+                name, contentType, content);
     }
 
     public static URL getUrl() throws MalformedURLException {
@@ -461,9 +459,9 @@ public class ModelUtils {
 
     public static List<TagTranslationVO> getTagTranslationsVO() {
         return Arrays.asList(TagTranslationVO.builder().id(1L).name("Новини")
-            .languageVO(LanguageVO.builder().id(1L).code("ua").build()).build(),
-            TagTranslationVO.builder().id(2L).name("News").languageVO(LanguageVO.builder().id(2L).code("en").build())
-                .build());
+                        .languageVO(LanguageVO.builder().id(1L).code("ua").build()).build(),
+                TagTranslationVO.builder().id(2L).name("News").languageVO(LanguageVO.builder().id(2L).code("en").build())
+                        .build());
     }
 
     public static LanguageVO getLanguageVO() {
@@ -484,10 +482,10 @@ public class ModelUtils {
 
     public static List<TagTranslationDto> getTagTranslationDtos() {
         return Arrays.asList(
-            TagTranslationDto.TagTranslationDtoBuilder().name("Новини")
-                .language(LanguageDTO.builder().id(2L).code("ua").build()).build(),
-            TagTranslationDto.TagTranslationDtoBuilder().name("News")
-                .language(LanguageDTO.builder().id(1L).code("en").build()).build());
+                TagTranslationDto.TagTranslationDtoBuilder().name("Новини")
+                        .language(LanguageDTO.builder().id(2L).code("ua").build()).build(),
+                TagTranslationDto.TagTranslationDtoBuilder().name("News")
+                        .language(LanguageDTO.builder().id(1L).code("en").build()).build());
     }
 
     public static TagViewDto getTagViewDto() {
@@ -496,36 +494,36 @@ public class ModelUtils {
 
     public static PageableAdvancedDto<TagVO> getPageableAdvancedDtoForTag() {
         return new PageableAdvancedDto<>(Collections.singletonList(getTagVO()),
-            9, 1, 2, 1,
-            true, false, false, true);
+                9, 1, 2, 1,
+                true, false, false, true);
     }
 
     public static AddEcoNewsCommentDtoResponse getAddEcoNewsCommentDtoResponse() {
         return AddEcoNewsCommentDtoResponse.builder()
-            .id(getEcoNewsComment().getId())
-            .author(getEcoNewsCommentAuthorDto())
-            .text(getEcoNewsComment().getText())
-            .modifiedDate(getEcoNewsComment().getModifiedDate())
-            .build();
+                .id(getEcoNewsComment().getId())
+                .author(getEcoNewsCommentAuthorDto())
+                .text(getEcoNewsComment().getText())
+                .modifiedDate(getEcoNewsComment().getModifiedDate())
+                .build();
     }
 
     public static EcoNewsComment getEcoNewsComment() {
         return EcoNewsComment.builder()
-            .id(1L)
-            .text("text")
-            .createdDate(LocalDateTime.now())
-            .modifiedDate(LocalDateTime.now())
-            .user(getUser())
-            .ecoNews(getEcoNews())
-            .build();
+                .id(1L)
+                .text("text")
+                .createdDate(LocalDateTime.now())
+                .modifiedDate(LocalDateTime.now())
+                .user(getUser())
+                .ecoNews(getEcoNews())
+                .build();
     }
 
     public static EcoNewsCommentAuthorDto getEcoNewsCommentAuthorDto() {
         return EcoNewsCommentAuthorDto.builder()
-            .id(getUser().getId())
-            .name(getUser().getName().trim())
-            .userProfilePicturePath(getUser().getProfilePicturePath())
-            .build();
+                .id(getUser().getId())
+                .name(getUser().getName().trim())
+                .userProfilePicturePath(getUser().getProfilePicturePath())
+                .build();
     }
 
     public static AddEcoNewsCommentDtoRequest getAddEcoNewsCommentDtoRequest() {
@@ -534,243 +532,243 @@ public class ModelUtils {
 
     public static EcoNewsCommentDto getEcoNewsCommentDto() {
         return EcoNewsCommentDto.builder()
-            .id(1L)
-            .modifiedDate(LocalDateTime.now())
-            .author(getEcoNewsCommentAuthorDto())
-            .text("text")
-            .replies(0)
-            .likes(0)
-            .currentUserLiked(false)
-            .status(CommentStatus.ORIGINAL)
-            .build();
+                .id(1L)
+                .modifiedDate(LocalDateTime.now())
+                .author(getEcoNewsCommentAuthorDto())
+                .text("text")
+                .replies(0)
+                .likes(0)
+                .currentUserLiked(false)
+                .status(CommentStatus.ORIGINAL)
+                .build();
     }
 
     public static List<LanguageTranslationDTO> getLanguageTranslationsDTOs() {
         return Arrays.asList(
-            new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "hello"),
-            new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "text"),
-            new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "smile"));
+                new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "hello"),
+                new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "text"),
+                new LanguageTranslationDTO(new LanguageDTO(1L, "en"), "smile"));
     }
 
     public static EcoNewsDto getEcoNewsDto() {
         return new EcoNewsDto(ZonedDateTime.now(), "imagePath", 1L, "title", "content", "text",
-            getEcoNewsAuthorDto(), Collections.singletonList("tag"), Collections.singletonList("тег"), 1, 0, 0);
+                getEcoNewsAuthorDto(), Collections.singletonList("tag"), Collections.singletonList("тег"), 1, 0, 0);
     }
 
     public static TagUaEnDto getTagUaEnDto() {
         return TagUaEnDto.builder()
-            .id(1L)
-            .nameUa("Соціальний")
-            .nameEn("Social")
-            .build();
+                .id(1L)
+                .nameUa("Соціальний")
+                .nameEn("Social")
+                .build();
     }
 
     public static AddEventDtoRequest getAddEventDtoRequest() {
         return new AddEventDtoRequest(1L, List.of(getEventDateLocationDto()), "event description event description",
-            List.of("Social"), "true", "event title");
+                List.of("Social"), "true", "event title");
     }
 
     public static EventDateLocationDto getEventDateLocationDto() {
         return EventDateLocationDto.builder()
-            .id(1L)
-            .onlineLink("https://google.com/")
-            .startDate(zonedDateTime.plusHours(3))
-            .finishDate(zonedDateTime.plusHours(7))
-            .coordinates(AddressDto.builder()
-                .latitude(1.0)
-                .longitude(1.0)
-                .build())
-            .build();
+                .id(1L)
+                .onlineLink("https://google.com/")
+                .startDate(zonedDateTime.plusHours(3))
+                .finishDate(zonedDateTime.plusHours(7))
+                .coordinates(AddressDto.builder()
+                        .latitude(1.0)
+                        .longitude(1.0)
+                        .build())
+                .build();
     }
 
     public static EventDateLocationDto getInvalidEventDateLocationDto() {
         return EventDateLocationDto.builder()
-            .id(1L)
-            .onlineLink("https://google.com/")
-            .startDate(zonedDateTime.minusHours(3))
-            .finishDate(zonedDateTime.minusHours(7))
-            .coordinates(AddressDto.builder()
-                .latitude(1.0)
-                .longitude(1.0)
-                .build())
-            .build();
+                .id(1L)
+                .onlineLink("https://google.com/")
+                .startDate(zonedDateTime.minusHours(3))
+                .finishDate(zonedDateTime.minusHours(7))
+                .coordinates(AddressDto.builder()
+                        .latitude(1.0)
+                        .longitude(1.0)
+                        .build())
+                .build();
     }
 
     public static EventDto getEventDto() {
         return EventDto.builder()
-            .id(1L)
-            .title("event title")
-            .description("event description event description")
-            .creationDate(zonedDateTime)
-            .dateLocations(List.of(getEventDateLocationDto()))
-            .organizer(EventAuthorDto.builder()
-                .id(getUser().getId())
-                .name(getUser().getName())
-                .organizerRating(0.0)
-                .build())
-            .titleImage("https://google.com/")
-            .open(true)
-            .isSubscribed(false)
-            .isFavorite(false)
-            .attendersEmailsDtos(new ArrayList<>())
-            .tags(Set.of(getTagUaEnDto()))
-            .build();
+                .id(1L)
+                .title("event title")
+                .description("event description event description")
+                .creationDate(zonedDateTime)
+                .dateLocations(List.of(getEventDateLocationDto()))
+                .organizer(EventAuthorDto.builder()
+                        .id(getUser().getId())
+                        .name(getUser().getName())
+                        .organizerRating(0.0)
+                        .build())
+                .titleImage("https://google.com/")
+                .open(true)
+                .isSubscribed(false)
+                .isFavorite(false)
+                .attendersEmailsDtos(new ArrayList<>())
+                .tags(Set.of(getTagUaEnDto()))
+                .build();
     }
 
     public static EventVO getEventVO() {
         return EventVO.builder()
-            .id(1L)
-            .title("event title")
-            .description("event description event description")
-            .organizer(UserVO.builder()
-                .id(getUser().getId())
-                .name(getUser().getName())
-                .userStatus(getUser().getUserStatus())
-                .role(getUser().getRole())
-                .build())
-            .titleImage("https://google.com/")
-            .build();
+                .id(1L)
+                .title("event title")
+                .description("event description event description")
+                .organizer(UserVO.builder()
+                        .id(getUser().getId())
+                        .name(getUser().getName())
+                        .userStatus(getUser().getUserStatus())
+                        .role(getUser().getRole())
+                        .build())
+                .titleImage("https://google.com/")
+                .build();
     }
 
     public static EcoNewsGenericDto getEcoNewsGenericDto() {
         String[] tagsEn = {"News"};
         String[] tagsUa = {"Новини"};
         return new EcoNewsGenericDto(1L, "title", "text", "shortInfo",
-            ModelUtils.getEcoNewsAuthorDto(), zonedDateTime, "https://google.com/", "source",
-            List.of(tagsUa), List.of(tagsEn), 0, 1, 0);
+                ModelUtils.getEcoNewsAuthorDto(), zonedDateTime, "https://google.com/", "source",
+                List.of(tagsUa), List.of(tagsEn), 0, 1, 0);
     }
 
     public static EcoNewsDto getEcoNewsDtoForFindDtoByIdAndLanguage() {
         return new EcoNewsDto(null, TestConst.SITE, 1L, "title", "text", "shortInfo",
-            getEcoNewsAuthorDto(), Collections.singletonList("News"), Collections.singletonList("Новини"), 0, 0, 0);
+                getEcoNewsAuthorDto(), Collections.singletonList("News"), Collections.singletonList("Новини"), 0, 0, 0);
     }
 
     public static UpdateEcoNewsDto getUpdateEcoNewsDto() {
         return new UpdateEcoNewsDto(1L, "title", "text", "shortInfo", Collections.singletonList("tag"),
-            "image", "source");
+                "image", "source");
     }
 
     public static SearchNewsDto getSearchNewsDto() {
         return new SearchNewsDto(1L, "title", getEcoNewsAuthorDto(), ZonedDateTime.now(),
-            Collections.singletonList("tag"));
+                Collections.singletonList("tag"));
     }
 
     public static EcoNewsCommentVO getEcoNewsCommentVO() {
         return new EcoNewsCommentVO(1L, "text", LocalDateTime.now(), LocalDateTime.now(), new EcoNewsCommentVO(),
-            new ArrayList<>(), getUserVO(), getEcoNewsVO(), false,
-            false, new HashSet<>());
+                new ArrayList<>(), getUserVO(), getEcoNewsVO(), false,
+                false, new HashSet<>());
     }
 
     public static EcoNewsDtoManagement getEcoNewsDtoManagement() {
         return new EcoNewsDtoManagement(1L, "title", "text", ZonedDateTime.now(),
-            Collections.singletonList("tag"), "imagePath", "source");
+                Collections.singletonList("tag"), "imagePath", "source");
     }
 
     public static EcoNewsViewDto getEcoNewsViewDto() {
         return new EcoNewsViewDto("1", "title", "author", "text", "startDate",
-            "endDate", "tag");
+                "endDate", "tag");
     }
 
     public static ShoppingListItem getShoppingListItem() {
         return ShoppingListItem.builder()
-            .id(1L)
-            .translations(getShoppingListItemTranslations())
-            .build();
+                .id(1L)
+                .translations(getShoppingListItemTranslations())
+                .build();
     }
 
     public static HabitAssignPropertiesDto getHabitAssignPropertiesDto() {
         return HabitAssignPropertiesDto.builder()
-            .defaultShoppingListItems(List.of(1L))
-            .duration(20)
-            .build();
+                .defaultShoppingListItems(List.of(1L))
+                .duration(20)
+                .build();
     }
 
     public static HabitAssign getHabitAssignWithUserShoppingListItem() {
         return HabitAssign.builder()
-            .id(1L)
-            .user(User.builder().id(21L).build())
-            .habit(Habit.builder().id(1L).build())
-            .status(HabitAssignStatus.INPROGRESS)
-            .workingDays(0)
-            .duration(20)
-            .userShoppingListItems(List.of(UserShoppingListItem.builder()
                 .id(1L)
-                .shoppingListItem(ShoppingListItem.builder().id(1L).build())
-                .status(ShoppingListItemStatus.INPROGRESS)
-                .build()))
-            .build();
+                .user(User.builder().id(21L).build())
+                .habit(Habit.builder().id(1L).build())
+                .status(HabitAssignStatus.INPROGRESS)
+                .workingDays(0)
+                .duration(20)
+                .userShoppingListItems(List.of(UserShoppingListItem.builder()
+                        .id(1L)
+                        .shoppingListItem(ShoppingListItem.builder().id(1L).build())
+                        .status(ShoppingListItemStatus.INPROGRESS)
+                        .build()))
+                .build();
     }
 
     private static UserStatusDto createUserStatusDto() {
         return UserStatusDto.builder()
-            .id(2L)
-            .userStatus(UserStatus.CREATED)
-            .build();
+                .id(2L)
+                .userStatus(UserStatus.CREATED)
+                .build();
     }
 
     private static User createUserRoleUser() {
         return User.builder()
-            .id(2L)
-            .role(Role.ROLE_USER)
-            .email("test2@mail.com")
-            .build();
+                .id(2L)
+                .role(Role.ROLE_USER)
+                .email("test2@mail.com")
+                .build();
     }
 
     private static UserVO createUserVORoleUser() {
         return UserVO.builder()
-            .id(2L)
-            .role(Role.ROLE_USER)
-            .email("test2@mail.com")
-            .build();
+                .id(2L)
+                .role(Role.ROLE_USER)
+                .email("test2@mail.com")
+                .build();
     }
 
     private static User createUser() {
         return User.builder()
-            .id(1L)
-            .role(Role.ROLE_MODERATOR)
-            .email("test@mail.com")
-            .build();
+                .id(1L)
+                .role(Role.ROLE_MODERATOR)
+                .email("test@mail.com")
+                .build();
     }
 
     private static UserVO createUserVO() {
         return UserVO.builder()
-            .id(1L)
-            .role(Role.ROLE_MODERATOR)
-            .email("test@mail.com")
-            .build();
+                .id(1L)
+                .role(Role.ROLE_MODERATOR)
+                .email("test@mail.com")
+                .build();
     }
 
     public static List<UserShoppingListItemVO> getUserShoppingListItemVOList() {
         List<UserShoppingListItemVO> list = new ArrayList<>();
         list.add(UserShoppingListItemVO.builder()
-            .id(1L)
-            .build());
+                .id(1L)
+                .build());
         return list;
     }
 
     public static List<CustomShoppingListItemVO> getCustomShoppingListItemVOList() {
         List<CustomShoppingListItemVO> list = new ArrayList<>();
         list.add(CustomShoppingListItemVO.builder()
-            .id(1L)
-            .text("text")
-            .build());
+                .id(1L)
+                .text("text")
+                .build());
         return list;
     }
 
     public static CustomShoppingListItemResponseDto getCustomShoppingListItemResponseDto() {
         return CustomShoppingListItemResponseDto.builder()
-            .id(1L)
-            .status(ShoppingListItemStatus.INPROGRESS)
-            .text("TEXT")
-            .build();
+                .id(1L)
+                .status(ShoppingListItemStatus.INPROGRESS)
+                .text("TEXT")
+                .build();
     }
 
     public static CustomShoppingListItem getCustomShoppingListItem() {
         return CustomShoppingListItem.builder()
-            .id(1L)
-            .status(ShoppingListItemStatus.INPROGRESS)
-            .text("TEXT")
-            .build();
+                .id(1L)
+                .status(ShoppingListItemStatus.INPROGRESS)
+                .text("TEXT")
+                .build();
     }
 
     public static Principal getPrincipal() {
@@ -779,59 +777,59 @@ public class ModelUtils {
 
     public static UserFilterDtoRequest getUserFilterDtoRequest() {
         return UserFilterDtoRequest.builder()
-            .userRole("USER")
-            .name("Test_Filter")
-            .searchCriteria("Test")
-            .userStatus("ACTIVATED")
-            .build();
+                .userRole("USER")
+                .name("Test_Filter")
+                .searchCriteria("Test")
+                .userStatus("ACTIVATED")
+                .build();
     }
 
     public static UserFilterDtoResponse getUserFilterDtoResponse() {
         return UserFilterDtoResponse.builder()
-            .id(1L)
-            .userRole("ADMIN")
-            .searchCriteria("Test")
-            .userStatus("ACTIVATED")
-            .name("Test")
-            .build();
+                .id(1L)
+                .userRole("ADMIN")
+                .searchCriteria("Test")
+                .userStatus("ACTIVATED")
+                .name("Test")
+                .build();
     }
 
     public static Filter getFilter() {
         return Filter.builder()
-            .id(1L)
-            .name("Test")
-            .user(new User())
-            .type("USERS")
-            .values("Test;ADMIN;ACTIVATED")
-            .build();
+                .id(1L)
+                .name("Test")
+                .user(new User())
+                .type("USERS")
+                .values("Test;ADMIN;ACTIVATED")
+                .build();
     }
 
     public static CustomShoppingListItem getCustomShoppingListItemWithStatusInProgress() {
         return CustomShoppingListItem.builder()
-            .id(2L)
-            .habit(Habit.builder()
-                .id(3L)
-                .build())
-            .user(getUser())
-            .text("item")
-            .status(ShoppingListItemStatus.INPROGRESS)
-            .build();
+                .id(2L)
+                .habit(Habit.builder()
+                        .id(3L)
+                        .build())
+                .user(getUser())
+                .text("item")
+                .status(ShoppingListItemStatus.INPROGRESS)
+                .build();
     }
 
     public static CustomShoppingListItemResponseDto getCustomShoppingListItemResponseDtoWithStatusInProgress() {
         return CustomShoppingListItemResponseDto.builder()
-            .id(2L)
-            .text("item")
-            .status(ShoppingListItemStatus.INPROGRESS)
-            .build();
+                .id(2L)
+                .text("item")
+                .status(ShoppingListItemStatus.INPROGRESS)
+                .build();
     }
 
     public static HabitFactViewDto getHabitFactViewDto() {
         return HabitFactViewDto.builder()
-            .id("1L")
-            .habitId("1L")
-            .content("Test content")
-            .build();
+                .id("1L")
+                .habitId("1L")
+                .content("Test content")
+                .build();
     }
 
 
@@ -856,43 +854,44 @@ public class ModelUtils {
         event.setTitleImage(AppConstant.DEFAULT_HABIT_IMAGE);
         event.setEventGrades(List.of(EventGrade.builder().grade(2).event(event).build()));
         return event;
+    }
 
     public static AddEventCommentDtoRequest getAddEventCommentDtoRequest() {
         return AddEventCommentDtoRequest.builder()
-            .parentCommentId(0L)
-            .text("My comment")
-            .build();
+                .parentCommentId(0L)
+                .text("My comment")
+                .build();
     }
 
     public static AddEventCommentDtoRequest getAddEventReplyCommentDtoRequest() {
         return AddEventCommentDtoRequest.builder()
-            .parentCommentId(1L)
-            .text("My comment")
-            .build();
+                .parentCommentId(1L)
+                .text("My comment")
+                .build();
     }
 
     public static EventComment getEventComment() {
         return EventComment.builder()
-            .id(1L)
-            .createdDate(LocalDateTime.now())
-            .event(getEvent())
-            .user(getUser())
-            .usersLiked(new HashSet<>())
-            .text("My comment")
-            .build();
+                .id(1L)
+                .createdDate(LocalDateTime.now())
+                .event(getEvent())
+                .user(getUser())
+                .usersLiked(new HashSet<>())
+                .text("My comment")
+                .build();
     }
 
     public static EventCommentDto getEventCommentDto() {
         return EventCommentDto.builder()
-            .id(1l)
-            .createdDate(LocalDateTime.now())
-            .likes(0)
-            .text("My comment")
-            .author(EventCommentAuthorDto.builder()
-                .id(getUser().getId())
-                .name(getUser().getName())
-                .userProfilePicturePath(getUser().getProfilePicturePath())
-                .build())
-            .build();
+                .id(1l)
+                .createdDate(LocalDateTime.now())
+                .likes(0)
+                .text("My comment")
+                .author(EventCommentAuthorDto.builder()
+                        .id(getUser().getId())
+                        .name(getUser().getName())
+                        .userProfilePicturePath(getUser().getProfilePicturePath())
+                        .build())
+                .build();
     }
 }
